# Level

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
backend/: Cargo.toml  build.rs  tauri.conf.json
backend/src/: logger.rs  main.rs  state.rs
backend_common/: Cargo.toml
backend_common/src/: error.rs  lib.rs
backend_macros/: Cargo.toml
backend_macros/src/: lib.rs
commands/: Cargo.toml
commands/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/models/: account.rs  account_transaction.rs  account_transaction_tag.rs  account_type.rs  budget.rs  category.rs  institution.rs  mod.rs  reminder.rs  report_template.rs  subcategory.rs  tag.rs  timeframe.rs  transaction_type.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
db/: Cargo.toml  build.rs
db/sql/init/: account.sql  account_transaction.sql  account_transaction_tag.sql  account_type.sql  budget.sql  category.sql  institution.sql  reminder.sql  report_template.sql  subcategory.sql  tag.sql  timeframe.sql
db/src/: account.rs  account_transaction.rs  account_transaction_tag.rs  account_type.rs  budget.rs  category.rs  db.rs  id.rs  institution.rs  lib.rs  quote.rs  reminder.rs  report_template.rs  save.rs  subcategory.rs  tag.rs  timeframe.rs  transaction_type.rs
frontend/: Cargo.toml  base.css  base.scss  common.scss  index.html  main.scss
frontend/assets/css/: base.css  main.css
frontend/src/: backend.rs  main.rs  state.rs  subview.rs  util.rs  validation.rs  view.rs
frontend/src/components/: app.rs  mod.rs
frontend/src/components/app/: app.rs  greeting.rs  mod.rs  root.rs
frontend/src/components/base/: alert.rs  badge.rs  button.rs  card.rs  checkbox.rs  chips.rs  datepicker.rs  demo.rs  dialog.rs  error.rs  fileselect.rs  frame.rs  icon.rs  iconbutton.rs  input.rs  menu.rs  mod.rs  numberinput.rs  progressbar.rs  radio.rs  radiobutton.rs  radiogroup.rs  select.rs  slider.rs  stepper.rs  switch.rs  tabs.rs  textarea.rs  tooltip.rs  util.rs
frontend/src/components/misc/: expandable_pane.rs  greeting.rs  loading.rs  loading_overlay.rs  mod.rs  quote.rs  save_icon.rs
frontend/src/components/subviews/: create_account.rs  create_transaction.rs  edit_account.rs  edit_categories.rs  edit_institutions.rs  edit_subcategories.rs  edit_tags.rs  mod.rs
frontend/src/components/views/: create.rs  home.rs  mod.rs  open.rs  report.rs  report_template.rs  save.rs  search.rs  settings.rs
frontend/src/hooks/: mod.rs  use_alert.rs  use_async.rs  use_command.rs  use_demo.rs  use_file_select.rs  use_focus.rs  use_id.rs  use_popup.rs  use_result.rs  use_subview.rs  use_theme.rs  use_tooltip.rs  use_value.rs  use_view.rs
frontend_common/: Cargo.toml
frontend_common/src/: lib.rs
frontend_macros/: Cargo.toml
frontend_macros/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
