[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }
dotenv = "0.15.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
backend_common = { path = "../backend_common" }
commands = { path = "../commands" }
common = { path = "../common" }
db = { path = "../db" }
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["dialog-open"] }
tokio = { version = "1.25", features = ["full"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
