[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[build-dependencies]
anyhow = "1.0"
db = { path = "../db" }
dotenv = "0.15.0"
project-root = "0.2.2"
tauri-build = { version = "1.2.1", features = [] }
tokio = { version = "1.25", features = ["full"] }

[dependencies]
async-trait = "0.1"
backend_common = { path = "../backend_common" }
chrono = "0.4"
commands = { path = "../commands" }
common = { path = "../common" }
db = { path = "../db" }
log = { version = "0.4", features = ["std"] }
project-root = "0.2.2"
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["dialog-open"] }
thiserror = "1.0"
tokio = { version = "1.25", features = ["full"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
