[package]
name = "backend_common"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.1"
backend_macros = { path = "../backend_macros" }
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
thiserror = "1.0"
tokio = { version = "1.25", features = ["full"] }
