[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
backend_common = { path = "../backend_common" }
rand = "0.8.5"
sha2 = "0.10.6"
tokio = { version = "1.25", features = ["full"] }

[dev-dependencies]
project-root = "0.2.2"
rand = "0.8.5"
