[package]
name = "db"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
backend_common = { path = "../backend_common" }
chrono = "0.4"
common = { path = "../common" }
crypto = { path = "../crypto" }
project-root = "0.2.2"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
tokio = { version = "1.25", features = ["full"] }

[build-dependencies]
anyhow = "1.0"
project-root = "0.2.2"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
tokio = { version = "1.25", features = ["full"] }
