[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4"
commands = { path = "../commands" }
csscolorparser = "0.6"
derive_more = "0.99.17"
frontend_macros = { path = "../frontend_macros" }
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
gloo-timers = "0.3"
js-sys = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = { version = "0.5" }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3", features = ["CssStyleDeclaration", "Document", "DomRect", "Element", "HtmlElement", "Node", "Range", "Selection", "Window"] }
yew = { version = "0.20", features = ["csr"] }
yewdux = "0.9"
yew-hooks = "0.2"
