[package]
name = "frontend_common"
version = "0.1.0"
edition = "2021"

[dependencies]
frontend_macros = { path = "../frontend_macros" }
js-sys = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = { version = "0.5" }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
web-sys = { version = "0.3", features = ["Window"] }
